--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Initially taken from Github's Python gitignore file
 
+# local venv
+*.transformers
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
